Fix responsive on mobile

--- a/style.css
+++ b/style.css
@@ -782,6 +782,9 @@ body.modal-open {
         font-family: Montserrat, Roboto, Verdana, Geneva, Tahoma, sans-serif;
         font-weight: 500;
     }
+    .navbar img{
+        display: none;
+    }
     .button-container {
         flex-direction: column;
         align-items: center;
@@ -794,6 +797,9 @@ body.modal-open {
     }
     .about hr {
         margin-bottom:2rem;
+    }
+    .about h3{
+        width: 80%;
     }
     .about img {
         height: 250px;
@@ -815,6 +821,9 @@ body.modal-open {
     .skill-category div {
         height: 12em;
         width: 100%;
+    }
+    .portfolio-container{
+        grid-template-columns: repeat(1, 1fr);
     }
     .icon-mobile {
         display: inline;
